test/lexer/error/err_15_illegal_char_underscore.pl0
var my_var; begin end